Fully integrated springboot.
Feel like hitting the thatwaseasy button tbh.

Finally.... I'm comfortable implementing AI, not one, not two, but hopefully an AI algorithm consisting of Weka, MOA, H2O.ai,XGBoost and DL4J. Maybe I'll sprinkle some openai or deepseek models along with postgresql ml.

Let the games begin.